css/webmin.css
@font-face{
	font-family: 'Lato Regular';
	src:url('../fonts/Lato-Regular.eot');
	src:url('../fonts/Lato-Regular.eot?#iefix') format('embedded-opentype'),
		url('../fonts/Lato-Regular.woff') format('woff'),
		url('../fonts/Lato-Regular.ttf') format('truetype'),
		url('../fonts/Lato-Regular.svg') format('svg');
	font-style: normal;
	font-weight: 400;
}
@font-face{
	font-family: 'Lato Light';
	src:url('../fonts/Lato-Light.eot');
	src:url('../fonts/Lato-Light.eot?#iefix') format('embedded-opentype'),
		url('../fonts/Lato-Light.woff') format('woff'),
		url('../fonts/Lato-Light.ttf') format('truetype'),
		url('../fonts/Lato-Light.svg') format('svg');
	font-style: normal;
	font-weight: 300;
}
*:focus, *:active{
	outline: none !important;
}
*::-moz-focus-inner{
	border: 0 !important;
}
html, body {
	height: 100%;
}
body {
	font-family: 'Lato Regular', sans-serif;
	background-color: #f9f9f9;
}
.container-inner {
	margin-top: 20px;
}
.navbar-webmin {
	background-color: #206ECF;
	/* border-color: #1B5EB1; */
	border-color: #195aa8;
}
.navbar-webmin  a {
	color: #eee;
}
.navbar-webmin a:hover,
.navbar-webmin a:focus {
	color: #fff;
}
.navbar-webmin .navbar-toggle-webmin {
	border: none;
	padding: 10px;
	background-color: transparent;
}
.navbar-webmin .navbar-toggle-webmin:hover, .navbar-webmin .navbar-toggle-webmin:focus {
	background-color: rgba(0, 0, 0, 0.25);
}
.navbar-webmin .navbar-toggle .icon-bar {
	background-color: #FFF;
}
.navbar-webmin .navbar-brand {
	color: #eee;
}
.navbar-webmin .navbar-brand span {
	font-family: 'Lato Light';
	font-size: 15px;
	margin-left: 4px;
}
.navbar-webmin .navbar-brand:hover, 
.navbar-webmin .navbar-brand:focus {
	color: #FFF;
}
.navbar-webmin .navbar-collapse, .navbar-webmin .navbar-form {
	border-color: #195aa8;
}
.navbar-webmin .navbar-nav > .active > a, 
.navbar-webmin .navbar-nav > .active > a:hover, 
.navbar-webmin .navbar-nav > .active > a:focus {
	color: #fff;
	background-color: #195aa8;
}
.navbar-webmin .navbar-nav > li > a {
	color: #eee;
}
.navbar-webmin .navbar-nav > li > a:hover,
.navbar-webmin .navbar-nav > li > a:focus {
	color: #fff;
}
.navbar-webmin .navbar-nav > li > a > i {
	margin-right: 5px;
}
.navbar-webmin .navbar-text {
	color: #FFF;
}
.webmin-sidebar {
	background-color: #23272D;
	height: calc(100% - 51px);
	position: fixed;
	width: 260px;
	margin-top: -20px;
	overflow-y: auto;
	transition: all 0.4s ease;
    -webkit-transition: all 0.4s ease;
    -moz-transition: all 0.4s ease;
    -o-transition: all 0.4s ease;
}
.aside-nav {
	margin-bottom: 0px;
	padding-left: 0px;
	list-style: none outside none;
}
.aside-nav > li {
    position: relative;
    display: block;
}
.aside-nav > li > a {
    position: relative;
    display: block;
    padding: 10px 15px;
}
.aside-nav li > a, .aside-nav li > a:focus {
	background-color: #23272D;
	color: #999;
	border-left: 4px solid transparent;
	text-decoration: none;
}
.aside-nav li > ul > li > a, .aside-nav  li > ul > li > a:focus {
	background-color: #2A2E36;
}
.aside-nav li > a:hover {
	border-left-color: #1A7AB9;
	color: #eee;
	text-decoration: none;
	transition: color 0.4s ease 0s, border-color 0.2s ease 0s;
}
.aside-nav li.active > a, .aside-nav li.active > a:hover {
	border-left-color: #1A7AB9;
	background-color: #181B1F;
	color: #eee;
}
.aside-nav li i {
	margin-right: 15px;
}
.aside-nav li.submenu {
	display: none;
}
.aside-nav li > ul > li > a {
	padding-left: 48px;
}
.aside-arrow {
	float: right;
	margin-right: -10px;
}
.aside-arrow i {
	transition: all 0.4s ease;
	-webkit-transition: all 0.4s ease;
	-moz-transition: all 0.4s ease;
	-o-transition: all 0.4s ease;
}
.aside-arrow i.rotated {
	transform: rotate(90deg);
	-webkit-transform: rotate(90deg);
	-moz-transform: rotate(90deg);
	-o-transform: rotate(90deg);
}
.search-aside, .power-aside, .theme-update-aside {
	margin: 10px 15px;
}
.update-header {
	font-size: 20px;
	color: #ddd;
	margin-bottom: 0;
}
.update-header i {
	margin-right: 4px;
}
.update-body {
	font-size: 12px;
	font-family: 'Lato Light', sans-serif;
	color: #ccc;
	margin-left: 34px;
}
.btn-update {
	margin-left: 34px;
}
.aside-close{
	width: 60px;
}
.iframe-container {
	margin-left: 260px;
	transition: all 0.4s ease;
	-webkit-transition: all 0.4s ease;
	height: calc(100% - 51px);
	margin-top: -20px;
	overflow: hidden;
}
.iframe-container.iframe-close {
	margin-left: 60px;
}
@media (max-width: 767px) {
	.iframe-container {
		margin-left: 0;
	}
}
iframe {
	border: 0px none;
	height: 100%;
	width: 100%;
}
/* ----- */
.btn {
	padding: 6px 13px;
	border-radius: 3px;
	border-width: 0;
	border-bottom-width: 2px;
	border-top-color: transparent;
	border-left-color: transparent;
	border-right-color: transparent;
}
.btn:hover, .btn:focus {
	border-top-color: transparent;
	border-left-color: transparent;
	border-right-color: transparent;
}
.form-control {
	box-shadow: none;
	-webkit-appearance: none;
}
/*.checkbox{
	margin: 0px;
	font-size: 14px;
	line-height: 1.42857;
	text-align: left;
	padding: 6px 12px;
	font-weight: normal;
	color: #555;
}
input[type='checkbox'] {
	position: absolute;
	clip: rect(1px, 1px, 1px, 1px);
}

input[type='checkbox'] + label > i:before{
	content: "\f096";
}

input[type='checkbox']:checked + label > i:before{
	content: "\f046";
}

input[type='checkbox'] + label > i{
	text-align: left;
	width: 1.0em;
	cursor: pointer;
}*/
.menu-row {
	text-align: center;
}
.menu-row a i.fa {
	font-size: 84px;
}
.menu-row a.menu-link {
	color: #999;
}
.menu-row a.menu-link:hover,
.menu-row a.menu-link:focus {
	color: #eee;
	text-decoration: none;
}

/*Added by piersg to improve the look of ui tables*/
.ui_table td {
	padding-bottom: 0.25em;
	padding-left: 0.5em;
	padding-right: 0.5em;
	padding-top: .25em;
}
.ui_table { 
	border-width: 0px;
	border-color:#fff;
}
.ui_table_head {
	background-color: #eee;
}
.ui_table_body {
	background-color: #f4f4f4;
}
.ui_label{
 text-align: right;
 vertical-align: middle;
}
.ui_table_row {
	border-bottom: 1px solid #ddd;
}
/*makes non-form text line up better w/ form elements:*/
.ui_value {
	vertical-align: middle;
}

